<resources>
    <string name="app_name">smartpos-demo</string>
    <string name="abort">Abort</string>
    <string name="send">SEND</string>
    <string name="currency">Currency</string>
    <string name="amount">Amount</string>
    <string name="target_transaction_id">Target Transaction ID</string>
    <string name="sale">Sale</string>
    <string name="send_button">Send</string>
    <string name="refund">Refund</string>
    <string name="tid">TID :</string>
    <string name="cancellation">Cancellation</string>
    <string name="templates">Templates</string>
    <string name="transaction">Transaction :</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="request">Request</string>
    <string name="automatic_fields_update">Automatic Fields Update</string>
    <string name="message_type">Message Type</string>
    <string name="transaction_date_time">Transaction Date Time</string>
    <string name="transaction_source_id">Transaction Source ID</string>
    <string name="card_number">Card Number (Cancellation : TXID + original transaction ID)</string>
    <string name="transaction_cvc2">Transaction CVC2</string>
    <string name="receipt_number">Receipt Number</string>
    <string name="payment_reason">Payment Reason</string>
    <string name="transaction_place">Transaction Place</string>
    <string name="authorization_number">Authorization Number</string>
    <string name="origin_indicator">Origin Indicator</string>
    <string name="password">Password</string>
    <string name="user_data">ECR Data</string>
    <string name="language_code">Language Code</string>
    <string name="receipt_layout">Receipt Layout</string>
    <string name="destination_currency">Destination Currency</string>
    <string name="tx_origin">TX Origin</string>
    <string name="personal_id">Personal ID</string>
    <string name="offline">Offline</string>
    <string name="terminal_number">Terminal Number :</string>
    <string name="terminal_number_">Terminal Number</string>
    <string name="hostname">Hostname :</string>
    <string name="ip">IP</string>
    <string name="port">Port :</string>
    <string name="add">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="port_">Port</string>
    <string name="connect">Connect</string>
    <string name="launch_natali">Launch NaTALI</string>
    <string name="response">RESPONSE</string>
    <string name="credit_card_issuer_and_acquirer_company">Credit card issuer and acquirer company</string>
    <string name="transaction_type">Transaction type</string>
    <string name="response_text">Response text</string>
    <string name="response_code">Response code</string>
    <string name="length">Length</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="transaction_datetime">Transaction datetime</string>
    <string name="vu_nummer">VU-NUMMER</string>
    <string name="operator_id">Operator ID</string>
    <string name="serien_nr">SERIEN-NR</string>
    <string name="orig_tx_id">Orig-TX-ID</string>
    <string name="stan">STAN</string>
    <string name="orig_stan">Orig-STAN</string>
    <string name="svc">SVC</string>
    <string name="ecr_data">ECR Data</string>
    <string name="exchange_rate">Exchange-Rate</string>
    <string name="foreign_tx_amount">Foreign-TX-Amount</string>
    <string name="balance_amount">Balance-Amount</string>
    <string name="merchant_name">Merchant Name</string>
    <string name="merchant_address">Merchant Address</string>
    <string name="receipt_header">Receipt Header</string>
    <string name="receipt_footer">Receipt Footer</string>
    <string name="bonus_points">Bonus Points</string>
    <string name="ex_fee">EX-Fee</string>
    <string name="tid_">TID :</string>
    <string name="online">Online</string>
    <string name="disconnected">DISCONNECT</string>
    <string name="connect_caps">CONNECT</string>
    <string name="service_alive">SERVICE ALIVE</string>
    <string name="service_stoped">SERVICE STOPED</string>
    <string name="interpret_stoped">INTERPRET STOPED</string>
    <string name="interpret_launched">INTERPRET LAUNCHED</string>
    <string name="service_reloading">SERVICE RELOADING</string>
    <string name="len_1">508</string>
    <string name="len_2">450</string>
    <string name="presence_offline">presence_offline</string>
    <string name="delete">Delete</string>
    <string name="connection">Connection</string>
    <string name="trans">Trans</string>
    <string name="responses">Response</string>
    <string name="card">card</string>
    <string name="print">Print</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
