<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:background="@color/colorTecsDarkPrimaryDark"
    android:padding="8dp"
    android:paddingBottom="16dp"
    app:cardBackgroundColor="@android:color/transparent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tecs_dark_line_container"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/transactionNameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:hint="Name"
            android:textColor="@android:color/white"
            android:textColorHighlight="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/transSettingsButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/amountEditLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/amount"
            android:minHeight="48dp"
            android:textColor="@android:color/white"
            android:textColorHighlight="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textColorLink="@android:color/white"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/transactionNameLayout"
            app:layout_constraintTop_toBottomOf="@+id/transSendButton">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/amountEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="number"
                android:textColor="@android:color/white"
                android:textColorHighlight="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textColorLink="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <ImageButton
            android:id="@+id/transSendButton"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/okey_button"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/transactionNameLayout"
            app:srcCompat="@drawable/round_send_white_48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/transSettingsButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/round_settings_white_48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/currencyEditLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/currency"
            android:minHeight="48dp"
            android:textColor="@android:color/white"
            android:textColorHighlight="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textColorLink="@android:color/white"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/transSendButton"
            app:layout_constraintTop_toBottomOf="@+id/amountEditLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/currencyEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="text"
                android:textColor="@android:color/white"
                android:textColorHighlight="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textColorLink="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <EditText
            android:id="@+id/transSourceIDEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/transaction_source_id"
            android:inputType="textPersonName"
            android:textColor="@android:color/white"
            android:textColorHighlight="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textColorLink="@android:color/white"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/currencyEditLayout"
            app:layout_constraintStart_toStartOf="@+id/transSendButton"
            app:layout_constraintTop_toBottomOf="@+id/currencyEditLayout" />

        <EditText
            android:id="@+id/cardNumEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/card_number"
            android:inputType="textPersonName"
            android:textColor="@android:color/white"
            android:textColorHighlight="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textColorLink="@android:color/white"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/transSendButton"
            app:layout_constraintStart_toStartOf="@+id/transSendButton"
            app:layout_constraintTop_toBottomOf="@+id/transSourceIDEdit" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Message type: "
            android:textColor="@android:color/white"
            android:textColorHighlight="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textColorLink="@android:color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/transactionNameLayout"
            app:layout_constraintStart_toEndOf="@+id/transactionNameLayout"
            app:layout_constraintTop_toTopOf="@+id/transactionNameLayout" />

        <TextView
            android:id="@+id/messageTypeEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:hint="Message type"
            android:textColor="@android:color/white"
            android:textColorHighlight="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textColorLink="@android:color/white"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <EditText
            android:id="@+id/cvc2EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/transaction_cvc2"
            android:inputType="textPersonName"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/transSendButton"
            app:layout_constraintStart_toStartOf="@+id/transSendButton"
            app:layout_constraintTop_toBottomOf="@+id/cardNumEditText" />

        <EditText
            android:id="@+id/receiptNumEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/receipt_number"
            android:inputType="textPersonName"
            android:textColor="@android:color/white"
            android:textColorHighlight="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textColorLink="@android:color/white"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/transSendButton"
            app:layout_constraintStart_toStartOf="@+id/transSendButton"
            app:layout_constraintTop_toBottomOf="@+id/cvc2EditText" />

        <EditText
            android:id="@+id/paymentReasonEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/payment_reason"
            android:inputType="textPersonName"
            android:textColor="@android:color/white"
            android:textColorHighlight="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textColorLink="@android:color/white"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/transSendButton"
            app:layout_constraintStart_toStartOf="@+id/transSendButton"
            app:layout_constraintTop_toBottomOf="@+id/receiptNumEditText" />

        <EditText
            android:id="@+id/transPlaceEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/transaction_place"
            android:inputType="textPersonName"
            android:textColor="@android:color/white"
            android:textColorHighlight="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textColorLink="@android:color/white"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/transSendButton"
            app:layout_constraintStart_toStartOf="@+id/transSendButton"
            app:layout_constraintTop_toBottomOf="@+id/paymentReasonEditText" />

        <EditText
            android:id="@+id/authNumberEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/authorization_number"
            android:textColor="@android:color/white"
            android:textColorHighlight="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textColorLink="@android:color/white"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/transSendButton"
            app:layout_constraintStart_toStartOf="@+id/transSendButton"
            app:layout_constraintTop_toBottomOf="@+id/transPlaceEditText" />

        <EditText
            android:id="@+id/originIndicatorEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/origin_indicator"
            android:inputType="textPersonName"
            android:textColor="@android:color/white"
            android:textColorHighlight="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textColorLink="@android:color/white"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/transSendButton"
            app:layout_constraintStart_toStartOf="@+id/transSendButton"
            app:layout_constraintTop_toBottomOf="@+id/authNumberEditText" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:textColor="@android:color/white"
            android:textColorHighlight="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textColorLink="@android:color/white"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/transSendButton"
            app:layout_constraintStart_toStartOf="@+id/transSendButton"
            app:layout_constraintTop_toBottomOf="@+id/originIndicatorEditText" />

        <EditText
            android:id="@+id/ecrDataEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ecr_data"
            android:inputType="textPersonName"
            android:textColor="@android:color/white"
            android:textColorHighlight="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textColorLink="@android:color/white"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/transSendButton"
            app:layout_constraintStart_toStartOf="@+id/transSendButton"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

        <EditText
            android:id="@+id/languageCodeEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/language_code"
            android:inputType="textPersonName"
            android:textColor="@android:color/white"
            android:textColorHighlight="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textColorLink="@android:color/white"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/transSendButton"
            app:layout_constraintStart_toStartOf="@+id/transSendButton"
            app:layout_constraintTop_toBottomOf="@+id/ecrDataEditText" />

        <EditText
            android:id="@+id/receiptLayoutEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/receipt_layout"
            android:inputType="textPersonName"
            android:textColor="@android:color/white"
            android:textColorHighlight="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textColorLink="@android:color/white"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/transSendButton"
            app:layout_constraintStart_toStartOf="@+id/transSendButton"
            app:layout_constraintTop_toBottomOf="@+id/languageCodeEditText" />

        <EditText
            android:id="@+id/destinationCurrencyEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/destination_currency"
            android:inputType="textPersonName"
            android:textColor="@android:color/white"
            android:textColorHighlight="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textColorLink="@android:color/white"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/transSendButton"
            app:layout_constraintStart_toStartOf="@+id/transSendButton"
            app:layout_constraintTop_toBottomOf="@+id/receiptLayoutEditText" />

        <EditText
            android:id="@+id/txOriginEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/tx_origin"
            android:inputType="textPersonName"
            android:textColor="@android:color/white"
            android:textColorHighlight="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textColorLink="@android:color/white"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/transSendButton"
            app:layout_constraintStart_toStartOf="@+id/transSendButton"
            app:layout_constraintTop_toBottomOf="@+id/destinationCurrencyEditText" />

        <EditText
            android:id="@+id/personalIDEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/personal_id"
            android:inputType="textPersonName"
            android:textColor="@android:color/white"
            android:textColorHighlight="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textColorLink="@android:color/white"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/transSendButton"
            app:layout_constraintStart_toStartOf="@+id/transSendButton"
            app:layout_constraintTop_toBottomOf="@+id/txOriginEditText" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>